# ExtKAGParser

./: CMakeLists.txt  ExtKAGParser.txt  README.md  テストのお願い.txt  変更履歴.txt
src/: KAGParser.cpp  KAGParser.rc  Main.cpp  TJSAry.h  TJSDic.h  tp_stub.h  ソース読める方へお願い.txt
src/vc2010/: ExtKAGParser.sln  ExtKAGParser.vcxproj  ExtKAGParser.vcxproj.filters
testscript/data/: startup.tjs
testscript/data/scenario/: TJSFunctions.ks  about.ks  first.ks
testscript/data/system/: Config.tjs  GraphicLayer.tjs  Initialize.tjs  MainWindow.tjs  Menus.tjs  YesNoDialog.tjs
